--- a/MyCity4Kids/MyCity4Kids/res/layout/campaign_detail_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/campaign_detail_activity.xml
@@ -190,7 +190,6 @@
                 android:layout_height="80dp"
                 android:layout_marginTop="24dp"
                 android:alpha="0.5"
-                android:background="@color/myprofile.improve_reach"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
@@ -223,13 +222,13 @@
                 android:layout_width="140dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:background="@drawable/campaign_detail_red_bg"
+                android:background="@drawable/campaign_detail_btn_bg"
                 android:gravity="center"
                 android:paddingLeft="@dimen/space_20"
                 android:paddingTop="5dp"
                 android:paddingRight="@dimen/space_20"
                 android:paddingBottom="5dp"
-                android:textColor="@color/white"
+                android:textColor="@color/campaign_list_buttons"
                 android:textSize="15sp"
                 app:fontName="oswald_regular.ttf"
                 app:layout_constraintEnd_toStartOf="@+id/view5"
@@ -256,14 +255,14 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginTop="8dp"
-                android:background="@drawable/campaign_detail_red_bg"
+                android:background="@drawable/campaign_detail_btn_bg"
                 android:gravity="center"
                 android:paddingLeft="@dimen/space_20"
                 android:paddingTop="5dp"
                 android:paddingRight="@dimen/space_20"
                 android:paddingBottom="5dp"
                 android:text="Rs. 5000"
-                android:textColor="@color/white"
+                android:textColor="@color/campaign_list_buttons"
                 android:textSize="15sp"
                 app:fontName="oswald_regular.ttf"
                 app:layout_constraintEnd_toEndOf="@+id/view4"
@@ -314,7 +313,7 @@
                 android:layout_marginTop="@dimen/space_20"
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="14dp"
-                android:background="@drawable/campaign_subscription_open"
+                android:background="@drawable/campaign_mymoney_btn"
                 android:gravity="center"
                 android:paddingTop="@dimen/space_10"
                 android:paddingBottom="@dimen/space_10"
@@ -422,6 +421,96 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/term_header" />
 
+            <View
+                android:id="@+id/view_6"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="@dimen/space_15"
+                android:background="#E5E5E5"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/term_text" />
+
+
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/refer_header"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/space_15"
+                android:layout_marginLeft="@dimen/space_15"
+                android:layout_marginTop="@dimen/space_15"
+                android:layout_marginEnd="@dimen/space_15"
+                android:layout_marginRight="@dimen/space_15"
+                android:text="@string/apply_refer_code"
+                android:textColor="@color/black"
+                android:textSize="14sp"
+                app:fontName="oswald_regular.ttf"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/view_6" />
+
+
+            <com.mycity4kids.widget.CustomFontEditText
+                android:id="@+id/refer_code_text"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/space_15"
+                android:layout_marginLeft="@dimen/space_15"
+                android:layout_marginTop="@dimen/space_5"
+                android:background="@drawable/campaign_detail_refer_code_text_bg"
+                android:paddingLeft="@dimen/space_30"
+                android:paddingTop="@dimen/space_10"
+                android:paddingBottom="@dimen/space_10"
+                android:hint="REFERRAL CODE"
+                android:textAllCaps="true"
+                android:textColor="@color/campaign_4A4A4A"
+                android:textSize="15sp"
+                app:fontName="oswald_regular.ttf"
+                app:layout_constraintEnd_toStartOf="@id/refer_code_apply"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/refer_header" />
+
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/refer_code_apply"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/space_5"
+                android:layout_marginEnd="@dimen/space_15"
+                android:layout_marginRight="@dimen/space_15"
+                android:background="@drawable/campaign_detail_refer_code_apply"
+                android:paddingLeft="@dimen/space_30"
+                android:paddingTop="@dimen/space_10"
+                android:paddingRight="@dimen/space_30"
+                android:paddingBottom="@dimen/space_10"
+                android:text="@string/add_article_topics.apply"
+                android:textColor="@color/campaign_list_buttons"
+                android:textSize="15sp"
+                app:fontName="oswald_regular.ttf"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toEndOf="@id/refer_code_text"
+                app:layout_constraintTop_toBottomOf="@+id/refer_header" />
+
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/refer_code_error"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/space_15"
+                android:layout_marginLeft="@dimen/space_15"
+                android:layout_marginTop="@dimen/space_5"
+                android:layout_marginEnd="@dimen/space_15"
+                android:layout_marginRight="@dimen/space_15"
+                android:textColor="@color/campaign_refer_code_error"
+                android:textSize="11sp"
+                android:visibility="gone"
+                app:fontName="open_sans.ttf"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/refer_code_text" />
 
             <com.mycity4kids.widget.CustomFontTextView
                 android:id="@+id/label_text"
@@ -438,7 +527,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/term_text" />
+                app:layout_constraintTop_toBottomOf="@+id/refer_code_error" />
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
 
