image proof and url proof done

--- a/MyCity4Kids/MyCity4Kids/res/layout/fragment_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/fragment_item.xml
@@ -14,8 +14,16 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="14dp"
+            android:layout_marginEnd="2dp"
+            android:layout_marginRight="2dp"
+            android:layout_toStartOf="@+id/imageDown"
+            android:layout_toLeftOf="@+id/imageDown"
             android:drawableLeft="@drawable/ic_arrow_drop_down_black_18dp"
             android:drawableTint="@color/greytxt_color"
+            android:ellipsize="end"
+            android:gravity="center_vertical"
+            android:maxLines="2"
+            android:text="aslkdjflaksjdf;laklsdjflalksjdf"
             android:textColor="@color/black"
             android:textSize="16sp"
             app:fontName="oswald_regular.ttf" />
@@ -44,6 +52,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="28dp"
+            android:layout_marginRight="30dp"
+            android:ellipsize="end"
+            android:maxLines="2"
             android:textColor="@color/grey"
             android:visibility="gone"
             app:fontName="oswald_regular.ttf" />
