--- a/MyCity4Kids/MyCity4Kids/res/drawable/ic_delete_svg.xml
+++ b/MyCity4Kids/MyCity4Kids/res/drawable/ic_delete_svg.xml
@@ -3,10 +3,10 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
-  <path
-      android:fillColor="#FF000000"
-      android:pathData="M6.3,21c0,0.5 0.5,1 1,1h9.4c0.5,0 1,-0.4 1,-1l0.7,-14.2H5.6L6.3,21zM14.1,10.4c0,-0.2 0.2,-0.4 0.4,-0.4h0.7c0.2,0 0.4,0.2 0.4,0.4v8.1c0,0.2 -0.2,0.4 -0.4,0.4h-0.7c-0.2,0 -0.4,-0.2 -0.4,-0.4V10.4zM11.3,10.4c0,-0.2 0.2,-0.4 0.4,-0.4h0.7c0.2,0 0.4,0.2 0.4,0.4v8.1c0,0.2 -0.2,0.4 -0.4,0.4h-0.7c-0.2,0 -0.4,-0.2 -0.4,-0.4V10.4L11.3,10.4zM8.4,10.4c0,-0.2 0.2,-0.4 0.4,-0.4h0.7c0.2,0 0.4,0.2 0.4,0.4v8.1c0,0.2 -0.2,0.4 -0.4,0.4H8.8c-0.2,0 -0.4,-0.2 -0.4,-0.4V10.4z"/>
-  <path
-      android:fillColor="#FF000000"
-      android:pathData="M18.8,3h-4.3V2.2c0,-0.1 -0.1,-0.2 -0.2,-0.2H9.7C9.6,2 9.5,2.1 9.5,2.2V3H5.2C4.8,3 4.6,3.3 4.6,3.7v2h14.9v-2C19.4,3.3 19.2,3 18.8,3z"/>
+    <path
+        android:fillColor="@color/app_red"
+        android:pathData="M6.3,21c0,0.5 0.5,1 1,1h9.4c0.5,0 1,-0.4 1,-1l0.7,-14.2H5.6L6.3,21zM14.1,10.4c0,-0.2 0.2,-0.4 0.4,-0.4h0.7c0.2,0 0.4,0.2 0.4,0.4v8.1c0,0.2 -0.2,0.4 -0.4,0.4h-0.7c-0.2,0 -0.4,-0.2 -0.4,-0.4V10.4zM11.3,10.4c0,-0.2 0.2,-0.4 0.4,-0.4h0.7c0.2,0 0.4,0.2 0.4,0.4v8.1c0,0.2 -0.2,0.4 -0.4,0.4h-0.7c-0.2,0 -0.4,-0.2 -0.4,-0.4V10.4L11.3,10.4zM8.4,10.4c0,-0.2 0.2,-0.4 0.4,-0.4h0.7c0.2,0 0.4,0.2 0.4,0.4v8.1c0,0.2 -0.2,0.4 -0.4,0.4H8.8c-0.2,0 -0.4,-0.2 -0.4,-0.4V10.4z" />
+    <path
+        android:fillColor="@color/app_red"
+        android:pathData="M18.8,3h-4.3V2.2c0,-0.1 -0.1,-0.2 -0.2,-0.2H9.7C9.6,2 9.5,2.1 9.5,2.2V3H5.2C4.8,3 4.6,3.3 4.6,3.7v2h14.9v-2C19.4,3.3 19.2,3 18.8,3z" />
 </vector>
