--- a/MyCity4Kids/MyCity4Kids/res/layout/campaign_url_proof_cell.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/campaign_url_proof_cell.xml
@@ -9,15 +9,15 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_alignParentTop="true"
-        android:layout_marginBottom="40dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
+        android:layout_marginBottom="40dp"
         android:background="@drawable/article_listing_item_border_bg"
+        android:enabled="false"
         android:fontFamily="sans-serif"
         android:hint="Enter page link or Url"
         android:paddingLeft="12dp"
         android:textColor="@color/black"
-        android:enabled="false"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -36,6 +36,7 @@
         android:id="@+id/imageApprovedRejected"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         app:layout_constraintStart_toStartOf="@+id/textUrl"
         app:layout_constraintTop_toBottomOf="@+id/textUrl"
         app:srcCompat="@drawable/ic_delete_cross" />
