--- a/MyCity4Kids/MyCity4Kids/res/layout/campaign_detail_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/campaign_detail_activity.xml
@@ -73,7 +73,7 @@
                 android:id="@+id/header_img"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:layout_marginTop="16dp"
+                android:scaleType="centerCrop"
                 app:layout_constraintDimensionRatio="16:9"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -88,11 +88,12 @@
                 android:layout_marginRight="@dimen/space_20"
                 android:background="@drawable/share_background"
                 android:drawableLeft="@drawable/ic_share_white"
-                android:drawablePadding="@dimen/space_20"
-                android:paddingLeft="@dimen/space_25"
+                android:drawablePadding="@dimen/space_7"
+                android:paddingLeft="@dimen/space_20"
                 android:paddingTop="@dimen/space_10"
-                android:paddingRight="@dimen/space_25"
+                android:paddingRight="@dimen/space_20"
                 android:paddingBottom="@dimen/space_10"
+                android:gravity="center"
                 android:text="SHARE"
                 android:textColor="@color/white"
                 android:textSize="14sp"
@@ -109,7 +110,7 @@
                 android:layout_marginLeft="@dimen/space_20"
                 android:layout_marginTop="@dimen/space_7"
                 app:civ_border_color="@color/app_red"
-                app:civ_border_width="2dp"
+                app:civ_border_width="0.5dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/header_img" />
 
