--- a/MyCity4Kids/MyCity4Kids/res/layout/campaign_list_recycler_adapter.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/campaign_list_recycler_adapter.xml
@@ -21,7 +21,7 @@
                 android:id="@+id/campaign_header"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:layout_marginTop="8dp"
+                android:scaleType="centerCrop"
                 app:layout_constraintDimensionRatio="H,16:9"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
@@ -37,10 +37,11 @@
                 android:layout_marginRight="@dimen/space_10"
                 android:background="@drawable/share_background"
                 android:drawableLeft="@drawable/ic_share_white"
-                android:drawablePadding="@dimen/space_20"
-                android:paddingLeft="@dimen/space_25"
+                android:gravity="center"
+                android:drawablePadding="@dimen/space_7"
+                android:paddingLeft="@dimen/space_20"
                 android:paddingTop="@dimen/space_10"
-                android:paddingRight="@dimen/space_25"
+                android:paddingRight="@dimen/space_20"
                 android:paddingBottom="@dimen/space_10"
                 android:text="SHARE"
                 android:textColor="@color/white"
@@ -59,7 +60,7 @@
                 android:layout_marginBottom="13dp"
                 android:src="@drawable/family_xxhdpi"
                 app:civ_border_color="@color/app_red"
-                app:civ_border_width="2dp"
+                app:civ_border_width="0.5dp"
                 app:layout_constraintBottom_toTopOf="@+id/view4"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/campaign_header" />
