--- a/MyCity4Kids/MyCity4Kids/res/layout/campaign_detail_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/campaign_detail_activity.xml
@@ -28,9 +28,10 @@
 
             <ImageView
                 android:id="@+id/back"
-                android:layout_width="@dimen/space_25"
-                android:layout_height="@dimen/space_18"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
+                android:padding="@dimen/space_10"
                 android:src="@drawable/back_xxhdpi"
                 android:tint="@color/black" />
 
@@ -460,10 +461,10 @@
                 android:layout_marginLeft="@dimen/space_15"
                 android:layout_marginTop="@dimen/space_5"
                 android:background="@drawable/campaign_detail_refer_code_text_bg"
+                android:hint="REFERRAL CODE"
                 android:paddingLeft="@dimen/space_30"
                 android:paddingTop="@dimen/space_10"
                 android:paddingBottom="@dimen/space_10"
-                android:hint="REFERRAL CODE"
                 android:textAllCaps="true"
                 android:textColor="@color/campaign_4A4A4A"
                 android:textSize="15sp"
