--- a/MyCity4Kids/MyCity4Kids/res/layout/campaign_detail_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/campaign_detail_activity.xml
@@ -73,8 +73,8 @@
                 android:id="@+id/header_img"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:scaleType="centerCrop"
-                app:layout_constraintDimensionRatio="16:9"
+                android:adjustViewBounds="true"
+                app:layout_constraintDimensionRatio="H,16:9"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -89,11 +89,11 @@
                 android:background="@drawable/share_background"
                 android:drawableLeft="@drawable/ic_share_white"
                 android:drawablePadding="@dimen/space_7"
+                android:gravity="center"
                 android:paddingLeft="@dimen/space_20"
                 android:paddingTop="@dimen/space_10"
                 android:paddingRight="@dimen/space_20"
                 android:paddingBottom="@dimen/space_10"
-                android:gravity="center"
                 android:text="SHARE"
                 android:textColor="@color/white"
                 android:textSize="14sp"
@@ -109,7 +109,7 @@
                 android:layout_marginStart="@dimen/space_20"
                 android:layout_marginLeft="@dimen/space_20"
                 android:layout_marginTop="@dimen/space_7"
-                app:civ_border_color="@color/app_red"
+                app:civ_border_color="@color/kids_detail"
                 app:civ_border_width="0.5dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/header_img" />
@@ -153,8 +153,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/space_7"
                 android:layout_marginLeft="@dimen/space_7"
-                android:layout_marginTop="@dimen/space_7"
+                android:layout_marginTop="@dimen/space_4"
                 android:text="Facebook campaign"
+                android:textColor="@color/campaign_expired"
                 app:fontName="open_sans.ttf"
                 app:layout_constraintStart_toEndOf="@+id/brand_img"
                 app:layout_constraintTop_toBottomOf="@+id/brand_name" />
@@ -179,7 +180,7 @@
                 android:layout_marginRight="@dimen/space_20"
                 android:text="Rs.1000"
                 android:textColor="@color/campaign_list_buttons"
-                android:textSize="20sp"
+                android:textSize="18sp"
                 android:textStyle="bold"
                 app:fontName="oswald_regular.ttf"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -189,7 +190,7 @@
                 android:id="@+id/view4"
                 android:layout_width="0dp"
                 android:layout_height="80dp"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="15dp"
                 android:alpha="0.5"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="1.0"
@@ -319,6 +320,7 @@
                 android:paddingTop="@dimen/space_10"
                 android:paddingBottom="@dimen/space_10"
                 android:text="@string/view_mymoney"
+                android:textAllCaps="true"
                 android:textColor="@color/white"
                 android:textSize="18sp"
                 app:fontName="oswald_regular.ttf"
@@ -461,10 +463,10 @@
                 android:layout_marginLeft="@dimen/space_15"
                 android:layout_marginTop="@dimen/space_5"
                 android:background="@drawable/campaign_detail_refer_code_text_bg"
+                android:hint="REFERRAL CODE"
                 android:paddingLeft="@dimen/space_30"
                 android:paddingTop="@dimen/space_10"
                 android:paddingBottom="@dimen/space_10"
-                android:hint="REFERRAL CODE"
                 android:textAllCaps="true"
                 android:textColor="@color/campaign_4A4A4A"
                 android:textSize="15sp"
