--- a/MyCity4Kids/MyCity4Kids/res/layout/campaign_list_recycler_adapter.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/campaign_list_recycler_adapter.xml
@@ -21,7 +21,7 @@
                 android:id="@+id/campaign_header"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:scaleType="centerCrop"
+                android:adjustViewBounds="true"
                 app:layout_constraintDimensionRatio="H,16:9"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
@@ -59,7 +59,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="13dp"
                 android:src="@drawable/family_xxhdpi"
-                app:civ_border_color="@color/app_red"
+                app:civ_border_color="@color/kids_detail"
                 app:civ_border_width="0.5dp"
                 app:layout_constraintBottom_toTopOf="@+id/view4"
                 app:layout_constraintStart_toStartOf="parent"
