--- a/MyCity4Kids/MyCity4Kids/res/layout/fragment_add_proof.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/fragment_add_proof.xml
@@ -8,7 +8,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
+        android:background="@drawable/shape_shadow_rectangle"
         android:minHeight="?attr/actionBarSize"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -78,123 +78,120 @@
         </RelativeLayout>
     </android.support.v7.widget.Toolbar>
 
-    <RelativeLayout
-        android:id="@+id/relativeProof"
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
+        app:layout_constraintRight_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar">
 
         <RelativeLayout
-            android:id="@+id/headerTextViewContainer"
+            android:id="@+id/relativeProof"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <com.mycity4kids.widget.CustomFontTextView
-                android:id="@+id/addlinkTextView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="12dp"
-                android:layout_marginTop="12dp"
-                android:layout_marginBottom="10dp"
-                android:text="Please add a link"
-                android:textColor="@color/ad.author_name.text"
-                android:textSize="20sp"
-                android:visibility="gone"
-                app:fontName="oswald.ttf" />
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
             <com.mycity4kids.widget.CustomFontTextView
                 android:id="@+id/addScreenShotTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
                 android:layout_alignParentLeft="true"
-                android:layout_alignParentTop="true"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
                 android:layout_marginStart="0dp"
                 android:layout_marginLeft="0dp"
-                android:layout_marginTop="0dp"
+                android:layout_marginTop="20dp"
                 android:layout_marginEnd="0dp"
                 android:layout_marginRight="0dp"
                 android:text="Please add a screenshots"
                 android:textColor="@color/ad.author_name.text"
                 android:textSize="20sp"
                 app:fontName="oswald.ttf" />
-        </RelativeLayout>
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/recyclerUrlProof"
-            android:name="com.mycity4kids.ui.campaign.fragment.CampaignAddProofFragment"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/headerTextViewContainer"
-            android:layout_marginTop="10dp"
-            android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintVertical_bias="0.0" />
+            <RelativeLayout
+                android:id="@+id/relativeMediaProof"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/addScreenShotTextView"
+                android:layout_marginTop="10dp"
+                android:alpha="0.3"
+                android:background="#EB3955"
+                android:gravity="center"
+                android:visibility="visible">
 
-        <RelativeLayout
-            android:id="@+id/relativeMediaProof"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/headerTextViewContainer"
-            android:layout_marginTop="0dp"
-            android:alpha="0.3"
-            android:background="#EB3955"
-            android:gravity="center"
-            android:visibility="gone">
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/recyclerMediaProof"
+                    android:layout_width="match_parent"
+                    android:layout_height="140dp"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginStart="0dp"
+                    android:layout_marginLeft="0dp"
+                    android:layout_marginTop="0dp"
+                    android:layout_marginEnd="0dp"
+                    android:layout_marginRight="0dp"
+                    android:orientation="horizontal" />
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/headerTextViewContainer"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/relativeMediaProof"
+                >
+
+                <com.mycity4kids.widget.CustomFontTextView
+                    android:id="@+id/addlinkTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="12dp"
+                    android:layout_marginTop="0dp"
+                    android:layout_marginBottom="10dp"
+                    android:text="Please add a link"
+                    android:textColor="@color/black"
+                    android:textSize="20sp"
+                    android:visibility="visible"
+                    app:fontName="oswald.ttf" />
+            </RelativeLayout>
 
             <android.support.v7.widget.RecyclerView
-                android:id="@+id/recyclerMediaProof"
+                android:id="@+id/recyclerUrlProof"
+                android:name="com.mycity4kids.ui.campaign.fragment.CampaignAddProofFragment"
                 android:layout_width="match_parent"
-                android:layout_height="140dp"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:layout_marginStart="0dp"
-                android:layout_marginLeft="0dp"
-                android:layout_marginTop="0dp"
-                android:layout_marginEnd="0dp"
-                android:layout_marginRight="0dp"
-                android:orientation="horizontal"
-                android:visibility="visible" />
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/headerTextViewContainer"
+                android:alpha="0.3" />
+
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/textFaq"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/recyclerUrlProof"
+                android:layout_marginTop="20dp"
+                android:paddingLeft="28dp"
+                android:text="FAQS"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                app:fontName="oswald_regular.ttf" />
+
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recyclerFaqs"
+                android:name="com.mycity4kids.ui.campaign.fragment.CampaignAddProofFragment"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/textFaq"
+                android:layout_marginTop="10dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textFaq"
+                app:layout_constraintVertical_bias="0.0" />
         </RelativeLayout>
-    </RelativeLayout>
-
-    <com.mycity4kids.widget.CustomFontTextView
-        android:id="@+id/textFaq"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:paddingLeft="28dp"
-        android:text="FAQS"
-        android:textColor="@color/black"
-        android:textSize="20sp"
-        app:fontName="oswald_regular.ttf"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/relativeProof" />
-
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerFaqs"
-        android:name="com.mycity4kids.ui.campaign.fragment.CampaignAddProofFragment"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textFaq"
-        android:layout_marginTop="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textFaq"
-        app:layout_constraintVertical_bias="0.0" />
+    </ScrollView>
 
 </android.support.constraint.ConstraintLayout>
 
