--- a/MyCity4Kids/MyCity4Kids/res/layout/campaign_list_recycler_adapter.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/campaign_list_recycler_adapter.xml
@@ -9,7 +9,9 @@
         style="@style/CardView.Light"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/space_10"
+        android:layout_marginRight="@dimen/space_10"
+        android:layout_marginLeft="@dimen/space_10"
+        android:layout_marginBottom="@dimen/space_10"
         app:cardCornerRadius="@dimen/space_2"
         app:cardElevation="@dimen/space_4">
 
@@ -37,11 +39,11 @@
                 android:layout_marginRight="@dimen/space_10"
                 android:background="@drawable/share_background"
                 android:drawableLeft="@drawable/ic_share_white"
-                android:gravity="center"
                 android:drawablePadding="@dimen/space_7"
-                android:paddingLeft="@dimen/space_20"
+                android:gravity="center"
+                android:paddingLeft="@dimen/space_15"
                 android:paddingTop="@dimen/space_10"
-                android:paddingRight="@dimen/space_20"
+                android:paddingRight="@dimen/space_15"
                 android:paddingBottom="@dimen/space_10"
                 android:text="SHARE"
                 android:textColor="@color/white"
@@ -59,8 +61,8 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="13dp"
                 android:src="@drawable/family_xxhdpi"
-                app:civ_border_color="@color/kids_detail"
-                app:civ_border_width="0.5dp"
+                app:civ_border_color="#E0E0E0"
+                app:civ_border_width="1dp"
                 app:layout_constraintBottom_toTopOf="@+id/view4"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/campaign_header" />
@@ -74,21 +76,21 @@
                 android:layout_marginTop="10dp"
                 android:textColor="#515151"
                 android:textSize="16sp"
-                android:textStyle="bold"
-                app:fontName="oswald.ttf"
+                app:fontName="oswald_regular.ttf"
                 app:layout_constraintStart_toEndOf="@+id/brand_img"
                 app:layout_constraintTop_toBottomOf="@+id/campaign_header" />
 
             <com.mycity4kids.widget.CustomFontTextView
                 android:id="@+id/campaign_name"
-                android:layout_width="wrap_content"
+                android:layout_width="170dp"
                 android:layout_height="wrap_content"
+                android:ellipsize="end"
                 android:layout_marginStart="7dp"
                 android:layout_marginLeft="7dp"
                 android:layout_marginTop="4dp"
                 android:textColor="#9B9B9B"
-                android:textSize="10sp"
-                app:fontName="oswald.ttf"
+                android:textSize="12sp"
+                app:fontName="open_sans.ttf"
                 app:layout_constraintStart_toEndOf="@+id/brand_img"
                 app:layout_constraintTop_toBottomOf="@+id/brand_name" />
 
@@ -107,8 +109,7 @@
                 android:paddingTop="5dp"
                 android:paddingBottom="5dp"
                 android:textColor="@color/white"
-                android:textSize="10sp"
-                android:textStyle="bold"
+                android:textSize="13sp"
                 app:fontName="oswald_regular.ttf"
                 app:layout_constraintBottom_toTopOf="@+id/view4"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -121,7 +122,6 @@
                 android:layout_height="66dp"
                 android:layout_marginTop="16dp"
                 android:alpha="0.04"
-                android:background="#D03F56"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
@@ -142,7 +142,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:textColor="@color/campaign_515151"
-                android:textSize="9sp"
+                android:textSize="11sp"
                 app:fontName="open_sans.ttf"
                 app:layout_constraintEnd_toStartOf="@+id/view5"
                 app:layout_constraintStart_toStartOf="@+id/view4"
@@ -177,7 +177,7 @@
                 android:layout_marginTop="8dp"
                 android:text="Total Payout"
                 android:textColor="@color/campaign_515151"
-                android:textSize="9sp"
+                android:textSize="11sp"
                 app:fontName="open_sans.ttf"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/view5"
