--- a/MyCity4Kids/MyCity4Kids/res/layout/deliverable_list_recycler_adapter.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/deliverable_list_recycler_adapter.xml
@@ -31,6 +31,8 @@
         android:layout_marginEnd="@dimen/space_15"
         android:layout_marginRight="@dimen/space_15"
         android:text="DELIVERABLE BRIEF"
+        android:autoLink="web"
+        android:textColorLink="#0000ee"
         android:textColor="@color/campaign_4A4A4A"
         android:textSize="15sp"
         app:fontName="open_sans.ttf" />
