--- a/MyCity4Kids/MyCity4Kids/res/layout/drawer_layout.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/drawer_layout.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
     <RelativeLayout
         android:id="@+id/layout_drawer"
         android:layout_width="match_parent"
@@ -144,9 +145,9 @@
         <com.mycity4kids.widget.CustomFontTextView
             android:id="@+id/rewardsTextView"
             android:layout_width="match_parent"
-            android:layout_height="60dp"
+            android:layout_height="50dp"
             android:layout_below="@+id/groupsTextView"
-            android:drawableLeft="@drawable/ic_rupee_icon"
+            android:drawableLeft="@drawable/ic_rupee_iconn"
             android:drawablePadding="20dp"
             android:drawableTint="@color/app_red"
             android:gravity="center_vertical"
@@ -162,7 +163,7 @@
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="60dp"
+            android:layout_height="50dp"
             android:layout_below="@+id/groupsTextView"
             android:layout_alignParentRight="true">
 
@@ -303,5 +304,7 @@
             android:textSize="14sp"
             app:fontName="oswald.ttf" />
     </RelativeLayout>
+
+
 
 </ScrollView>
