--- a/MyCity4Kids/MyCity4Kids/res/layout/deliverable_list_recycler_adapter.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/deliverable_list_recycler_adapter.xml
@@ -14,7 +14,6 @@
         android:layout_marginTop="@dimen/space_15"
         android:layout_marginEnd="@dimen/space_15"
         android:layout_marginRight="@dimen/space_15"
-        android:text="DELIVERABLE BRIEF"
         android:textAllCaps="true"
         android:textColor="@color/campaign_515151"
         android:textSize="17sp"
@@ -30,7 +29,6 @@
         android:layout_marginTop="@dimen/space_5"
         android:layout_marginEnd="@dimen/space_15"
         android:layout_marginRight="@dimen/space_15"
-        android:text="DELIVERABLE BRIEF"
         android:autoLink="web"
         android:textColorLink="#0000ee"
         android:textColor="@color/campaign_4A4A4A"
@@ -38,9 +36,11 @@
         app:fontName="open_sans.ttf" />
 
     <View
+        android:id="@+id/view"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginTop="@dimen/space_15"
+        android:visibility="gone"
         android:background="#E5E5E5" />
 
 </LinearLayout>
